--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="./jquery-3.4.1.slim.min.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
 	<script type="text/javascript" src="./registration.js"></script>
+
 </head>
 
 <body>
@@ -12,21 +14,56 @@
 	<div id="welcome">
 
 		<span> <b>welcome to the pacman game!</b></span>
-		<button onclick="swapDiv('registration', 'welcome')" id="regButton" value="Click To Open registration">Click To Open registration</button>
-		<button onclick="swapDiv('login', 'welcome')" id="loginButton" value="Click To Open login page">Click To Open login page</button>
+		<br>
+		<br>
+		<button onclick="swapDiv('registration', 'welcome')" id="regButton" value="Click To Open registration">Click To
+			Open registration</button>
+		<br>
+		<br>
+		<button onclick="swapDiv('login', 'welcome')" id="loginButton" value="Click To Open login page">Click To Open
+			login page</button>
 
 	</div>
 
-	<div id="registration" style="display: none;">
-		<span> <b>welcome to the registration page!</b></span>
+	<div id="registration" class="container" style="display: none;">
+		<form id="myForm" onsubmit="submitFunc()">
+			<div class="container">
+				<h1>Register</h1>
+				<p>Please fill in this form to create an account.</p>
+				<hr>
+
+				<label for="userName"><b>User Name</b></label>
+				<input type="text" placeholder="User name" name="Uname" required>
+
+				<label for="psw"><b>Password</b></label>
+				<input type="password" placeholder="Enter Password" name="psw" required>
+
+				<label for="fullName"><b>Full Name</b></label>
+				<input type="text" placeholder="Full name" name="Fname" required>
+
+				<label for="email"><b>Email</b></label>
+				<input type="text" placeholder="Enter Email" name="email" required>
+				<br>
+				<button type="submit" value="Submit" >Register</button>
+			</div>
+
+		</form>
+
 	</div>
 
 	<div id="login" style="display: none;">
 		<span> <b>welcome to the login page!</b></span>
 	</div>
 
+	<div id="settings" style="display: none;">
+		<span> <b>welcome to the settings page!</b></span>
+	</div>
 
-	<div id="main game window" style="display: none;">
+	<div id="about" style="display: none;">
+		<span> <b>welcome to the about page!</b></span>
+	</div>
+
+	<div id="game" style="display: none;">
 		<div id="score">
 			<label for="lblScore">SCORE:</label>
 			<input id="lblScore" type="text" />
