--- a/index.html
+++ b/index.html
@@ -5,124 +5,140 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="./jquery-3.4.1.slim.min.js"></script>
 
-	<script type="text/javascript" src="./registration.js"></script>
 
 	<script type="text/javascript" src="./app.js"></script>
+	<script type="text/javascript" src="./registration.js"></script>
 
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
+	<!-- 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="jquery.validate.js"></script>
 
-<!-- 	<script src="jquery.js"></script>
+	<script src="jquery.js"></script>
 	<script src="jquery.validate.js"></script>
-	<link rel="stylesheet" href="css/screen.css"> -->
 
 
-
-
-<!-- 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-	<link rel="stylesheet" href="/resources/demos/style.css">
- 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 	<script>
 
 	$.validator.setDefaults({
-		submitHandler: function() {
-			alert("submitted!");
-		}
-	});
-</script>
+			submitHandler: function () {
+				alert("submitted!");
+			}
+		}); 
 
-	<script>
-	$( function() {
-	  $( "#datepicker" ).datepicker();
-	} );
-	</script>
+
+	</script>  -->
 </head>
 
 <body>
-<div class="switch screens">
-	<div id="welcome">
+	<header>
+		<h1 ALIGN="center">Welcome to the pacman game</h1>
 
-		<span> <b>welcome to the pacman game!</b></span>
-		<br>
-		<br>
-		<button onclick="swapDiv('registration', 'welcome')" id="regButton" class="wlc-btn" value="Click To Open registration">Click To
-			Open registration</button>
-		<br>
-		<br>
-		<button onclick="swapDiv('login', 'welcome')" id="loginButton" class="wlc-btn" value="Click To Open login page">Click To Open
-			login page</button>
+		<h2 ALIGN="center">logo</h1>
 
-	</div>
+			<h3 ALIGN="center">by Yuval Mor Yosef and Adi Ashkenazi</h1>
 
-	<div id="registration" class="container" style="display: none;">
-		<form class="cmxform" id="signupForm" method="get" action="">
-			<fieldset>
-				<legend>Validating a complete form</legend>
+	</header>
 
-				<p>
-					<label for="username">Username</label>
-					<input id="username" name="username" type="text">
-				</p>
-				<p>
-					<label for="password">Password</label>
-					<input id="password" name="password" type="password">
-				</p>
-				<p>
-					<label for="firstname">First name</label>
-					<input id="firstname" name="firstname" type="text">
-				</p>
-				<p>
-					<label for="lastname">Last name</label>
-					<input id="lastname" name="lastname" type="text">
-				</p>
-				<p>
-					<label for="email">Email</label>
-					<input id="email" name="email" type="email">
-				</p>
-				<p>
-					<label for="date">Date of birth</label>
-					<input id="date" name="date" type="date">
-				</p>
-				<p>
-					<input class="submit" type="submit" value="Submit">
-				</p>
-			</fieldset>
-		</form>
-
-	</div>
-
-	<div id="login" style="display: none;">
-		<span> <b>welcome to the login page!</b></span>
-		<form>
-
-	</form>
-
-
-	</div>
-
-	<div id="settings" style="display: none;">
-		<span> <b>welcome to the settings page!</b></span>
-	</div>
-
-	<div id="about" style="display: none;">
-		<span> <b>welcome to the about page!</b></span>
-	</div>
-
-	<div id="game" style="display: none;">
-		<div id="score">
-			<label for="lblScore">SCORE:</label>
-			<input id="lblScore" type="text" />
-		</div>
-		<div id="time">
-			<label for="lblTime">TIME:</label>
-			<input id="lblTime" type="text" />
-		</div>
-		<div id="game">
-			<canvas id="canvas" height="600" width="600"></canvas>
+	<div id="menu">
+		<div class="navbar">
+			<li class="nav-item"> <a href="#welcome">welcome</a></li>
+			<li class="nav-item"> <a href="#registration">registration</a></li>
+			<li class="nav-item"> <a href="#login">login</a></li>
+			<li class="nav-item"> <a href="#settings">settings</a></li>
+			<li class="nav-item"> <a href="#about">about</a></li>
+			<li class="nav-item"> <a href="#game">game</a></li>
 		</div>
 	</div>
-</div>
+	<div id="content">
+		<div id="welcome">
+
+			<span ALIGN="center"> <b>welcome to the pacman game!</b></span>
+			<br>
+			<br>
+			<button onclick="swapDiv('registration', 'welcome')" id="regButton" class="wlc-btn"
+				value="Click To Open registration">Click To
+				Open registration</button>
+			<br>
+			<br>
+			<button onclick="swapDiv('login', 'welcome')" id="loginButton" class="wlc-btn"
+				value="Click To Open login page">Click To Open
+				login page</button>
+
+		</div>
+
+		<div id="registration" class="container" style="display: none;">
+			<form class="cmxform" id="signupForm" name="signupForm" method="get" action="">
+				<fieldset>
+					<legend>Validating a complete form</legend>
+
+					<p>
+						<label for="username">Username</label>
+						<input id="username" name="username" type="text">
+					</p>
+					<p>
+						<label for="password">Password</label>
+						<input id="password" name="password" type="password">
+					</p>
+					<p>
+						<label for="firstname">First name</label>
+						<input id="firstname" name="firstname" type="text">
+					</p>
+					<p>
+						<label for="lastname">Last name</label>
+						<input id="lastname" name="lastname" type="text">
+					</p>
+					<p>
+						<label for="email">Email</label>
+						<input id="email" name="email" type="email">
+					</p>
+					<p>
+						<label for="date">Date of birth</label>
+						<input id="date" name="date" type="date">
+					</p>
+					<p>
+						<input class="submit" type="submit" value="Submit">
+					</p>
+				</fieldset>
+			</form>
+
+		</div>
+
+		<div id="login" style="display: none;">
+			<span> <b>welcome to the login page!</b></span>
+			<form>
+
+			</form>
+
+
+		</div>
+
+		<div id="settings" style="display: none;">
+			<span> <b>welcome to the settings page!</b></span>
+		</div>
+
+		<div id="about" style="display: none;">
+			<span> <b>welcome to the about page!</b></span>
+		</div>
+
+		<div id="game" style="display: none;">
+			<div id="score">
+				<label for="lblScore">SCORE:</label>
+				<input id="lblScore" type="text" />
+			</div>
+			<div id="time">
+				<label for="lblTime">TIME:</label>
+				<input id="lblTime" type="text" />
+			</div>
+			<div id="game">
+				<canvas id="canvas" height="600" width="600"></canvas>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+
+	</footer>
 
 </body>
 
