--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
 				<label for="lblTime">TIME:</label>
 				<input id="lblTime" type="text" />
 			</div>
+			<div id="username">
+				<label for="lblUsername">Username:</label>
+				<input id="lblUsername" type="text" />
+			</div>
 			<div id="game">
 				<canvas id="canvas" height="600" width="600"></canvas>
 			</div>
