--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
 				<label for="lblUsername">Username:</label>
 				<input id="lblUsername" type="text" />
 			</div>
+			<div id="life">
+				<label for="lblLife">Life:</label>
+				<input id="lblLife" type="text" />
+			</div>
 			<div id="game">
 				<canvas id="canvas" height="600" width="600"></canvas>
 			</div>
