--- a/index.html
+++ b/index.html
@@ -206,9 +206,45 @@
 				<input id="lblLife" type="text" />
 			</div>
 
-			<div id="life">
+			<div id="newgame">
 				<button id="newgame" onclick="newGame()">new Game</button>
 			</div>
+
+			<div id="keys">
+				<label for="up">Up:</label>
+				<input id="lblup" type="text" />
+				<label for="down">Down:</label>
+				<input id="lbldown" type="text" />
+				<label for="left">Left:</label>
+				<input id="lblleft" type="text" />
+				<label for="right">Right:</label>
+				<input id="lblright" type="text" />
+			</div>
+			<div id ="foodsettings">
+				<label for="foodAmount">food Amount:</label>
+				<input id="lblfoodAmount" type="text" />
+				<label for="fivepointsColor">five points Color:</label>
+				<input id="lblfivepointsColor" type="text" />
+				<label for="fifteenpointsColor">fifteen points Color:</label>
+				<input id="lblfifteenpointsColor" type="text" />
+				<label for="twenyfivepointsColor">twenyfive oints Color:</label>
+				<input id="lbltwenyfivepointsColor" type="text" />
+			</div>
+			<div id="timesettings">
+				<label for="lbltimesettings">TIME Setting:</label>
+				<input id="lbltimesettings" type="text" />
+			</div>
+			<div id="monstersSettings">
+				<label for="lblmonstersSettings">monsters amount:</label>
+				<input id="lblmonstersSettings" type="text" />
+			</div>
+			<audio id="myAudio">
+				<source src="pacmanSong.mp3" type="audio/mpeg" >
+					pacman
+			  </audio>
+			  <button onclick="playAudio()" type="button">Play Audio</button>
+			<button onclick="pauseAudio()" type="button">Pause Audio</button> 
+
 
 			<div id="game">
 				<canvas id="canvas" height="600" width="600"></canvas>
