--- a/index.html
+++ b/index.html
@@ -246,20 +246,24 @@
 					<tr>
 
 						<td> <label for="fivepointsColor">five points:</label>
-							<input id="lblfivepointsColor" type="text" /></td>
+							<input id="lblfivepointsColor" type="text" value="color" /></td>
 						<td> <label for="fifteenpointsColor">fifteen points:</label>
-							<input id="lblfifteenpointsColor" type="text" /></td>
+							<input id="lblfifteenpointsColor" type="text" value="color"/></td>
 						<td> <label for="twenyfivepointsColor">twenyfive points:</label>
-							<input class="colorChoose" id="lbltwenyfivepointsColor" type="text" /></td>
+							<input class="colorChoose" id="lbltwenyfivepointsColor" type="text" value="color"/></td>
 
 					</tr>
 				</table>
 			</div>
-
-		</div>
+			<img id="myClockImage" src="sandClock.jpeg" type="image/png" style="display: none;">
+			<img id="myExtraFiftyImage" src="extra50.jpeg" type="image/jpg" style="display: none;">
+			<img id="myMedicineImage" src="circleMedicine.jpeg" type="image" style="display: none;">
+			<img id="myMonsterImage" src="monsterImage.jpeg" type="gif" style="display: none;">
 		<div id="playGame">
 			<canvas id="canvas" height="600" width="600"></canvas>
 		</div>
+	</div>
+
 	</div>
 	</div>
 
