--- a/index.html
+++ b/index.html
@@ -187,35 +187,51 @@
 		</div>
 		<div id="game" class="content" style="display: none;">
 			<div id="leftSide">
-
-				<div id="score">
-					<label for="lblScore">SCORE:</label>
-					<input id="lblScore" type="text" />
-				</div>
-				<div id="time">
-					<label for="lblTime">TIME:</label>
-					<input id="lblTime" type="text" />
-				</div>
-				<div id="username">
-					<label for="lblUsername">Username:</label>
-					<input id="lblUsername" type="text" />
-				</div>
-				<div id="life">
-					<label for="lblLife">Life:</label>
-					<input id="lblLife" type="text" />
-				</div>
-
-				<div id="newgame">
-					<button id="newgame" onclick="newGame()">new Game</button>
-				</div>
-				<audio id="myAudio">
-					<source src="pacmanSong.mp3" type="audio/mpeg">
-					pacman
-				</audio>
-				<button id="playAudio" onclick="playAudio()" type="button">Play Audio</button>
-				<button id="pauseAudio" onclick="pauseAudio()" type="button">Pause Audio</button>
-
+				<table>
+					<td>
+						<tr>
+							<div id="score">
+								<label for="lblScore">SCORE:</label>
+								<input id="lblScore" type="text" />
+							</div>
+						</tr>
+						<tr>
+							<div id="time">
+								<label for="lblTime">TIME:</label>
+								<input id="lblTime" type="text" />
+							</div>
+						</tr>
+						<tr>
+							<div id="username">
+								<label for="lblUsername">Username:</label>
+								<input id="lblUsername" type="text" />
+							</div>
+						</tr>
+						<tr>
+							<div id="life">
+								<label for="lblLife">Life:</label>
+								<input id="lblLife" type="text" />
+							</div>
+						</tr>
+						<tr>
+							<div id="newgame">
+								<button id="newgame" onclick="newGame()" class="btnset">new Game</button>
+							</div>
+						</tr>
+						<tr>
+							<button id="playAudio" onclick="playAudio()" class="btnset" type="button">Play Audio</button>
+						</tr>
+						<tr>	
+							<button id="pauseAudio" onclick="pauseAudio()" class="btnset" type="button">Pause Audio</button>
+						</tr>
+					</td>
+				</table>
 			</div>
+
+			<audio id="myAudio">
+				<source src="pacmanSong.mp3" type="audio/mpeg">
+			</audio>
+
 			<div id="rightSide">
 				<table>
 					<tr>
@@ -258,16 +274,17 @@
 			<img id="myExtraFiftyImage" src="extra50.jpeg" type="image/jpg" style="display: none;">
 			<img id="myMedicineImage" src="circleMedicine.jpeg" type="image" style="display: none;">
 			<img id="myMonsterImage" src="monsterImage.jpeg" type="gif" style="display: none;">
-			<div id="playGame">
+
+			<div id ="playGame">
 				<canvas id="canvas" height="600" width="600"></canvas>
 			</div>
 		</div>
 
-	<footer>
-		<strong><a href="mailto:yuvalmoryosef3@gmail.com">send mail to yuval</a></strong>
-		<br>
-		<strong><a href="mailto:adiashk@post.bgu.ac.il">send mail to adi</a></strong>
-	</footer>
+		<footer ALIGN="center">
+			<strong><a href="mailto:yuvalmoryosef3@gmail.com">send mail to yuval</a></strong>
+			<br>
+			<strong><a href="mailto:adiashk@post.bgu.ac.il">send mail to adi</a></strong>
+		</footer>
 
 </body>
 
