--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
 			<img id="openImg" src="open.png">
 			<br>
 			<br>
-			<button onclick="swapDiv('registration')" id="regButton" class="btn" type="button"> Click To Open
-				registration</button>
+			<button onclick="swapDiv('registration')" id="regButton" class="btn" >Registration</button>
 			<br>
 			<br>
-			<button onclick="swapDiv('login')" id="loginButton" class="btn" type="button">Click To Open login
-				page</button>
+			<button onclick="swapDiv('login')" id="loginButton" class="btn" >Login</button>
 
 		</div>
 
