--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 		</div>
 		</div>
 		<footer ALIGN="center">
-			This web was write in HTML5, css and javascript.
+			This web was written in HTML5, css and javascript.
 			<strong><a href="mailto:yuvalmoryosef3@gmail.com">send mail to yuval</a></strong>
 			or
 			<strong><a href="mailto:adiashk@post.bgu.ac.il">send mail to adi</a></strong>
