--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<button class="random" onclick="randomDetails()">Random</button>
 
 					<p>
-						<input class="submit" type="submit" value="Submit">
+						<input class="submit" type="submit" value="Submit" onclick="submitFunc()">
 					</p>
 				</fieldset>
 			</form>
